--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,10 +17,11 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^20.12.12",
     "@types/nodemailer": "^6.4.16",
+    "express": "^4.21.2",
     "prisma": "^6.1.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
@@ -29,7 +30,7 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
+    "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15"
