--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cors": "^2.8.5",
+    "js-cookie": "^2.2.1",
+    "jwt-decode": "^4.0.0",
     "next": "15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
