--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
+    "react-select": "^5.9.0",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
