--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
+    "react-toastify": "^11.0.3",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
